--- a/index.html
+++ b/index.html
@@ -10,14 +10,10 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="">
     </head>
-    <script src="js/bundle.js"></script>
-    <body onload="window.main()">
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        <h1>Nyannboom</h1>
-        <canvas id="game" width="720" height="480"></canvas>
+    <body>
+        <a href="/nyannboom">Nyannboom</a>
+        <a href="/reacter">Reacter</a>
     </body>
 </html>
