--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
         <a href="/nyannboom">Nyannboom</a><br>
         <a href="/reacter">Reacter</a><br
         <a href="/gbg">Tetris</a><br>
+        <a href="/pan">Paint after Numbers</a><br>
     </body>
 </html>
